--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,22 @@ services:
       - '3307:3306'
     volumes:
       - './.mysql-data/db:/var/lib/mysql'
+    networks:
+      devops-network:
+
+  devops-project:
+    build: .\
+    image: devops-project
+    container_name: "devops-project-service"
+    ports:
+      - "8080:8080"
+    depends_on:
+      - database
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/devops-db
+    networks:
+      devops-network:
+
+networks:
+  devops-network:
+    driver: bridge
