--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,12 @@ services:
     image: devops-project
     container_name: "devops-project-service"
     ports:
-      - "8080:8080"
+      - "8082:8082"
     depends_on:
       - database
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/devops-db
+      - SERVER_PORT=8082
     networks:
       devops-network:
 
